# AMMM-project

./: .gitignore  .oplproject  README.md  project.mod  pseudocode.md  script.mod
heuristics/: README.md  generate_instances.sh  heuristics.cabal  hie.yaml
heuristics/app/: Main.hs
heuristics/src/: Generators.hs  Heuristics.hs
heuristics/src/Internal/: GRASP.hs  Generators.hs  Greedy.hs  Heuristics.hs  LocalSearch.hs  OPL.hs  Pretty.hs  Types.hs
heuristics/test/: Spec.hs
heuristics/test/Test/: OPL.hs
output/10/: cplex.txt  grasp.txt  greedy.txt  ls.txt
output/100/: cplex.txt  grasp.txt  greedy.txt  ls.txt
output/150/: cplex.txt  grasp.txt  greedy.txt  ls.txt
output/20/: cplex.txt  grasp.txt  greedy.txt  ls.txt
output/200/: cplex.txt  grasp.txt  greedy.txt  ls.txt
output/250/: cplex.txt  grasp.txt  greedy.txt  ls.txt
output/30/: cplex.txt  grasp.txt  greedy.txt  ls.txt
output/300/: cplex.txt  grasp.txt  greedy.txt  ls.txt
output/40/: cplex.txt  grasp.txt  greedy.txt  ls.txt
output/50/: cplex.txt  grasp.txt  greedy.txt  ls.txt
output/huge/: cplex.txt  grasp.txt  greedy.txt  ls.txt
slides-images/: readme.md
