cabal-version:       2.4
name:                heuristics
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Arnau Abella
maintainer:          arnauabella@gmail.com
copyright:           2020 Arnau Abella
extra-source-files:  README.md
source-repository head
  type:                git
  location:            https://github.com/monadplus/AMMM-project.git

common common-options
    build-depends:    base ^>=4.13.0.0
    default-language: Haskell2010
    other-extensions: OverloadedStrings
                      BangPatterns
    ghc-options:      -O2
    ghc-options:      -Wall
                      -Werror
                      -- -Wno-unused-imports
                      -Wno-name-shadowing
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wcompat
                      -Widentities
                      -Wredundant-constraints
                      -Wpartial-fields
                      -fhide-source-paths
                      -freverse-errors
  if impl(ghc >= 8.8.1)
    ghc-options:      -Wmissing-deriving-strategies

executable heuristics
  import:              common-options
  main-is:             Main.hs
  build-depends:       heuristics,
                       optparse-applicative ^>=0.16
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

library
  import:             common-options
  hs-source-dirs:     src
  exposed-modules:    Generators
                        Internal.Generators
                        Internal.OPL
                        Internal.Types
                        Internal.Greedy
                        Internal.LocalSearch
                        Internal.GRASP

  build-depends:      array              ^>=0.5.4,
                      aeson              ^>=1.5.4,
                      bytestring         ^>=0.10,
                      containers         ^>=0.6,
                      deepseq            ^>=1.4,
                      generic-lens       ^>=2.0,
                      microlens-platform ^>=0.4,
                      mtl                ^>=2.2,
                      mwc-random         ^>=0.15,
                      text               ^>=1.2,

test-suite heuristics-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.OPL
  build-depends:        heuristics,
                        base        ^>=4.13.0.0,
                        bytestring  ^>=0.10,
                        hspec       ^>=2.7.0,
                        microlens-platform ^>=0.4,
                        QuickCheck  ^>=2.14,
